# starling

./: .gitignore  Cargo.toml  README.md  STARLING_PARITY_WORK.md  Starlingfile  TILT_PARITY_GAPS.md  publish.sh
.cargo/: config.toml
.github/: gen_banner.py
.github/workflows/: parity.yml
docs/: PARITY_ROADMAP.md
examples/k8s/: README.md  Starlingfile  deploy.yaml
examples/k8s/app/: Dockerfile  index.html
src/: build_history.rs  certs.rs  ci.rs  engine.rs  health.rs  k8s.rs  kube_client.rs  main.rs  netmodes.rs  probe.rs  proxy.rs  seed.rs  server.rs  store.rs
src/api/: mod.rs  store.rs  v1alpha1.rs  webview.rs
src/daemon/: client.rs  mod.rs  protocol.rs
src/starlingfile/: manifest.rs  mod.rs
src/tui/: mod.rs
