[package]
name = "starling-devex"
version = "0.1.8"
edition = "2021"
description = "Starling: a local dev orchestrator with a central daemon, shared named-URL proxy, and a k9s-style TUI (a Rust port of Tilt + portless)"
license = "Apache-2.0"
repository = "https://github.com/thousandbirdsinc/starling-devex"
readme = "README.md"
keywords = ["tilt", "kubernetes", "dev-environment", "tui", "proxy"]
categories = ["command-line-utilities", "development-tools"]

# The package is `starling-devex`; the installed CLI command is `starling`.
[[bin]]
name = "starling"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
starlark = "=0.12.0"
notify = "6"
anyhow = "1"
# Pinned: starlark_map 0.12 needs hashbrown 0.14's `RawTable`, but cargo
# otherwise selects allocative 0.3.6 which only impls Allocative for hashbrown
# 0.16 types. 0.3.4 pulls hashbrown 0.14 and compiles. Bump with starlark.
allocative = "=0.3.4"
serde_yaml = "0.9"
ratatui = "0.28"
crossterm = "0.28"
dirs = "5"
rcgen = { version = "0.13", features = ["x509-parser"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
bollard = "0.17"
tar = "0.4"
regex = "1.12.3"
libc = "0.2"
